--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   	<meta http-equiv="x-ua-compatible" content="ie=edge">
 
   	<title>Notes Era</title>
-  	<link rel="shortcut icon" href="assets/images/logo/favourite_icon_1.svg">
+  	<link rel="shortcut icon" href="Assets2/logo.png">
 
   	<!-- Framework - CSS Include -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
