--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
             <div class="content_wrap">
               <div class="row">
                 <div class="col col-lg-7">
-                  <h1 class="banner_small_title">Notes Era</h1>
+                  <h1 class="banner_small_title">Notes-Era</h1>
                   <h2 class="banner_big_title">Your Ultimate Source for All Educational Requirements Online</h2>
                   <p class="banner_description">
-                    Welcome to Notes Era – Your Ultimate Source for All Educational Note Requirements Online. At Notes Era, we understand the importance of quality educational resources in your learning journey. Our platform offers a comprehensive collection of notes, study materials, and resources to cater to the diverse needs of students and learners.
+                    Welcome to Notes-Era – Your Ultimate Source for All Educational Note Requirements Online. At Notes-Era, we understand the importance of quality educational resources in your learning journey. Our platform offers a comprehensive collection of notes, study materials, and resources to cater to the diverse needs of students and learners.
                   </p>
                   <ul class="banner_btns_group unordered_list">
                     <li>
@@ -139,43 +139,43 @@
                 <div class="col col-lg-5">
                   <div class="banner_image_1 decoration_wrap">
                     <div class="image_wrap">
-                      <img src="Assets2/banner.png" alt="NotesEra – Online Learning Platform">
+                      <img src="Assets2/banner.png" alt="Notes-Era – Online Learning Platform">
                     </div>
                     <div class="satisfied_student">
                       <h3 class="wrap_title">4000+ Satisfied Student</h3>
                       <ul class="students_thumbnail unordered_list_center">
                         <li>
                           <span>
-                            <img src="Assets2/Untitled design (1).png" alt="NotesEra – Online Learning Platform">
+                            <img src="Assets2/Untitled design (1).png" alt="Notes-Era – Online Learning Platform">
                           </span>
                         </li>
                         <li>
                           <span>
-                            <img src="Assets2/Untitled design (2).png" alt="NotesEra – Online Learning Platform">
+                            <img src="Assets2/Untitled design (2).png" alt="Notes-Era – Online Learning Platform">
                           </span>
                         </li>
                         <li>
                           <span>
-                            <img src="Assets2/Untitled design (3).png" alt="NotesEra – Online Learning Platform">
+                            <img src="Assets2/Untitled design (3).png" alt="Notes-Era – Online Learning Platform">
                           </span>
                         </li>
                         <li>
                           <span>
-                            <img src="Assets2/Untitled design (4).png" alt="NotesEra – Online Learning Platform">
+                            <img src="Assets2/Untitled design (4).png" alt="Notes-Era – Online Learning Platform">
                           </span>
                         </li>
                         <li>
                           <span>
-                            <img src="Assets2/Untitled design.png" alt="NotesEra – Online Learning Platform">
+                            <img src="Assets2/Untitled design.png" alt="Notes-Era – Online Learning Platform">
                           </span>
                         </li>
                       </ul>
                     </div>
                     <div class="deco_item shape_img_1" data-parallax='{"y" : -130, "smoothness": 6}'>
-                      <img src="assets/images/shape/shape_img_1.png" alt="NotesEra – Online Learning Platform">
+                      <img src="assets/images/shape/shape_img_1.png" alt="Notes-Era – Online Learning Platform">
                     </div>
                     <div class="deco_item shape_img_2" data-parallax='{"y" : 160, "smoothness": 6}'>
-                      <img src="assets/images/shape/shape_img_2.png" alt="NotesEra – Online Learning Platform">
+                      <img src="assets/images/shape/shape_img_2.png" alt="Notes-Era – Online Learning Platform">
                     </div>
                   </div>
                 </div>
@@ -259,7 +259,7 @@
                   <div class="col col-md-6">
                     <div class="service_item" data-magnetic>
                       <div class="item_icon">
-                        <img src="assets/images/service/icon_diploma.svg" alt="NotesEra – Online Learning Platform">
+                        <img src="assets/images/service/icon_diploma.svg" alt="Notes-Era – Online Learning Platform">
                       </div>
                       <div class="item_content">
                         <h3 class="item_title">A certificate</h3>
@@ -323,7 +323,7 @@
                     <span>+</span>
                   </h3>
                   <p class="mb-0">
-                    Courses are covered by Notes Era comprehensively.
+                    Courses are covered by Notes-Era comprehensively.
                   </p>
                 </div>
               </div>
@@ -393,7 +393,7 @@
                 <li role="presentation">
                   <button data-bs-toggle="tab" data-bs-target="#teb_design" type="button" role="tab" aria-selected="false">
                     <i class="fas fa-palette"></i>
-                    <span>Database</span>
+                    <span>Marketing</span>
                   </button>
                 </li>
               </ul>
@@ -433,7 +433,7 @@
                           </ul>
                           <h3 class="item_title">
                             <a href="https://instagram.com/ayushsaxena_29?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D">
-                              Ayush Saxena: The Mastermind of Notes Era
+                              Ayush Saxena: The Mastermind of Notes-Era
                             </a>
                           </h3>
                           <a class="btn_unfill" href="https://www.linkedin.com/in/ayush-saxena-3684b2218/">
@@ -963,10 +963,10 @@
                 <div class="content_wrap ps-lg-3">
                   <div class="section_heading">
                     <h2 class="heading_text">
-                      Choose Notes Era for Unmatched Learning Experience
+                      Choose Notes-Era for Unmatched Learning Experience
                     </h2>
                     <p class="heading_description mb-0">
-                      Elevate your learning with Notes Era's comprehensive resources, expertly tailored to enhance your educational journey and success.
+                      Elevate your learning with Note- Era's comprehensive resources, expertly tailored to enhance your educational journey and success.
                     </p>
                   </div>
                   <ul class="info_list unordered_list_block">
@@ -1007,15 +1007,15 @@
 
         <!-- Pricing Section - Start
         ================================================== -->
-        <section class="pricing_section section_space_lg bg_light">
+<!--         <section class="pricing_section section_space_lg bg_light">
           <div class="container decoration_wrap">
             <div class="section_heading text-center">
               <h2 class="heading_text mb-0">
                 Premium Price Packages
               </h2>
-            </div>
+            </div> -->
 
-            <div class="pricing_cards_wrapper row align-items-center">
+<!--             <div class="pricing_cards_wrapper row align-items-center">
               <div class="col col-lg-4">
                 <div class="pricing_card text-center tilt">
                   <h3 class="card_heading">Basic Plan</h3>
@@ -1029,8 +1029,8 @@
                       <i class="fas fa-caret-right"></i>
                       <span>10 Courses for 3 Months</span>
                     </li>
-                    <li>
-                      <i class="fas fa-caret-right"></i>
+                    <li> -->
+<!--                       <i class="fas fa-caret-right"></i>
                       <span>50+ Hours of Video Lectures</span>
                     </li>
                     <li>
@@ -1046,8 +1046,8 @@
                     <a class="btn border_dark" href="#!">
                       <span>
                         <small>Grab Now</small>
-                        <small>Grab Now</small>
-                      </span>
+                        <small>Grab Now</small> -->
+<!--                       </span>
                     </a>
                   </div>
                 </div>
@@ -1064,8 +1064,8 @@
                   <ul class="info_list unordered_list_block text-start">
                     <li>
                       <i class="fas fa-caret-right"></i>
-                      <span>20 Courses for 3 Months</span>
-                    </li>
+                      <span>20 Courses for 3 Months</span> -->
+<!--                     </li>
                     <li>
                       <i class="fas fa-caret-right"></i>
                       <span>100+ Hours of Video Lectures</Video></span>
@@ -1087,8 +1087,8 @@
                       </span>
                     </a>
                   </div>
-                </div>
-              </div>
+                </div> -->
+<!--               </div>
               <div class="col col-lg-4">
                 <div class="pricing_card text-center tilt">
                   <h3 class="card_heading">Premium Plan</h3>
@@ -1112,12 +1112,12 @@
                     </li>
                     <li>
                       <i class="fas fa-caret-right"></i>
-                      <span>Help in Assignments</span>
-                    </li>
+                      <span>Help in Assignments</span> -->
+<!--                     </li>
                   </ul>
                   <div class="btn_wrap pb-0">
-                    <a class="btn border_dark" href="#!">
-                      <span>
+                    <a class="btn border_dark" href="#!"> -->
+<!--                       <span>
                         <small>Grab Now</small>
                         <small>Grab Now</small>
                       </span>
@@ -1134,7 +1134,7 @@
               <img src="assets/images/shape/shape_img_5.png" alt="NotesEra – Online Learning Platform">
             </div>
           </div>
-        </section>
+        </section> -->
         <!-- Pricing Section - End
         ================================================== -->
 
