--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
               <div class="col col-lg-6">
                 <div class="section_heading">
                   <h2 class="heading_text">
-                    Anticipate the Offerings of Notes Era.
+                    Anticipate the Offerings of Notes-Era.
                   </h2>
                   <p class="heading_description mb-0">
-                    Discover a treasure trove of educational resources at Notes Era. Elevate your learning journey with a diverse range of notes, papers, and more.
+                    Discover a treasure trove of educational resources at Notes-Era. Elevate your learning journey with a diverse range of notes, papers, and more.
                   </p>
                 </div>
 
@@ -225,7 +225,7 @@
                       <div class="item_content">
                         <h3 class="item_title">Notes</h3>
                         <p class="mb-0">
-                          Notes Era offers comprehensive educational notes, catering to a wide spectrum of subjects and academic levels.
+                          Notes-Era offers comprehensive educational notes, catering to a wide spectrum of subjects and academic levels.
                         </p>
                       </div>
                     </div>
@@ -238,7 +238,7 @@
                       <div class="item_content">
                         <h3 class="item_title">Assignments</h3>
                         <p class="mb-0">
-                          Explore a diverse range of assignment resources and guidelines on Notes Era, enhancing your academic excellence.
+                          Explore a diverse range of assignment resources and guidelines on Notes-Era, enhancing your academic excellence.
                         </p>
                       </div>
                     </div>
@@ -1334,7 +1334,7 @@
                     </a>
                   </div>
                   <p>
-                    Notes Era: Your ultimate study companion. Expert resources for academic success, hassle-free learning, and better grades.
+                    Notes-Era: Your ultimate study companion. Expert resources for academic success, hassle-free learning, and better grades.
                   </p>
                   <ul class="social_links unordered_list">
                     <li>
@@ -1477,7 +1477,7 @@
                           <img src="Assets2/article1.png" alt="NotesEra – Online Learning Platform">
                         </span>
                         <span class="item_content">
-                          <span class="item_author"><i class="fas fa-user-alt"></i> by Notes Era</span>
+                          <span class="item_author"><i class="fas fa-user-alt"></i> by Notes-Era</span>
                           <strong class="item_title">Best Video Editing Softwares in 2023</strong>
                           <small class="item_post_date">14 Aug 2023</small>
                         </span>
@@ -1489,7 +1489,7 @@
                           <img src="Assets2/article2.png" alt="NotesEra – Online Learning Platform">
                         </span>
                         <span class="item_content">
-                          <span class="item_author"><i class="fas fa-user-alt"></i> by Notes Era</span>
+                          <span class="item_author"><i class="fas fa-user-alt"></i> by Notes-Era</span>
                           <strong class="item_title">Four Books To Improve your Mindset.</strong>
                           <small class="item_post_date">14 Aug 2023</small>
                         </span>
@@ -1504,7 +1504,8 @@
         <div class="copyright_widget">
           <div class="container">
             <p class="copyright_text text-center mb-0">
-              <a href="https://www.instagram.com/jasneet2003/">Jasneet</a> © <b>NotesEra</b> Template All rights reserved Copyrights 2023
+<!--               <a href="https://www.instagram.com/jasneet2003/"></a> © <b>NotesEra</b> Template All rights reserved Copyrights 2023 -->
+                <a href="></a> © <b>NotesEra</b> Template All rights reserved Copyrights 2023
             </p>
           </div>
         </div>
