--- a/index.html
+++ b/index.html
@@ -1505,7 +1505,7 @@
           <div class="container">
             <p class="copyright_text text-center mb-0">
 <!--               <a href="https://www.instagram.com/jasneet2003/"></a> © <b>NotesEra</b> Template All rights reserved Copyrights 2023 -->
-                <a href="></a> © <b>NotesEra</b> Template All rights reserved Copyrights 2023
+                <a href="https://www.instagram.com/noteseraa/"></a> © <b>NotesEra</b> Template All rights reserved Copyrights 2023
             </p>
           </div>
         </div>
