--- a/index.html
+++ b/index.html
@@ -1286,7 +1286,7 @@
         ================================================== -->
         <section class="newslatter_section">
           <div class="container">
-            <div class="newslatter_box" style="background-image: url('assets/images/shape/shape_img_6.svg');">
+            <div class="newslatter_box" style="background-color: #4f2b70,     box-shadow: 10px 10px 10px #8058a5;">
               <div class="row justify-content-center">
                 <div class="col col-lg-6">
                   <div class="section_heading text-center">
