--- a/index.html
+++ b/index.html
@@ -1290,10 +1290,10 @@
               <div class="row justify-content-center">
                 <div class="col col-lg-6">
                   <div class="section_heading text-center">
-                    <h2 class="heading_text">
+                    <h2 class="heading_text" style="color:white;">
                       Subscribe Now And Get All Updates on Phone!
                     </h2>
-                    <p class="heading_description mb-0">
+                    <p class="heading_description mb-0"  style="color:white;">
                       Subscribe for instant mobile updates, ensuring you're always informed and connected. Don't miss out!
                     </p>
                   </div>
