--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                   </p>
                 </div>
 
-                <div class="image_widget">
+                <div class="image_widget" style="box-shadow: 10px 10px 0 #533a6a;">
                   <img src="Assets2/about_image_1.jpg" alt="NotesEra – Online Learning Platform">
                 </div>
               </div>
