--- a/index.html
+++ b/index.html
@@ -1286,7 +1286,10 @@
         ================================================== -->
         <section class="newslatter_section">
           <div class="container">
-            <div class="newslatter_box" style="background-color: #4f2b70 ; box-shadow: 10px 10px 10px #8058a5; color:white">
+            <div class="newslatter_box" style="background-color: #9e54e2 ; box-shadow: 10px 10px 10px #000000; color:white">  //  element.style {
+    background-color: #9e54e2;
+    box-shadow: 10px 10px 10px #000000;
+    color: white;                     //
               <div class="row justify-content-center">
                 <div class="col col-lg-6">
                   <div class="section_heading text-center">
