--- a/index.html
+++ b/index.html
@@ -1002,20 +1002,20 @@
             </div>
           </div>
         </section>
-        <!-- Courses Info Section - End
+<!--         Courses Info Section - End
         ================================================== -->
 
         <!-- Pricing Section - Start
         ================================================== -->
-<!--         <section class="pricing_section section_space_lg bg_light">
+        <section class="pricing_section section_space_lg bg_light">
           <div class="container decoration_wrap">
             <div class="section_heading text-center">
               <h2 class="heading_text mb-0">
                 Premium Price Packages
               </h2>
-            </div> -->
+            </div>
 
-<!--             <div class="pricing_cards_wrapper row align-items-center">
+            <div class="pricing_cards_wrapper row align-items-center">
               <div class="col col-lg-4">
                 <div class="pricing_card text-center tilt">
                   <h3 class="card_heading">Basic Plan</h3>
@@ -1029,8 +1029,8 @@
                       <i class="fas fa-caret-right"></i>
                       <span>10 Courses for 3 Months</span>
                     </li>
-                    <li> -->
-<!--                       <i class="fas fa-caret-right"></i>
+                    <li>
+                    <i class="fas fa-caret-right"></i>
                       <span>50+ Hours of Video Lectures</span>
                     </li>
                     <li>
@@ -1047,7 +1047,7 @@
                       <span>
                         <small>Grab Now</small>
                         <small>Grab Now</small> -->
-<!--                       </span>
+                       </span>
                     </a>
                   </div>
                 </div>
@@ -1065,7 +1065,7 @@
                     <li>
                       <i class="fas fa-caret-right"></i>
                       <span>20 Courses for 3 Months</span> -->
-<!--                     </li>
+                    </li>
                     <li>
                       <i class="fas fa-caret-right"></i>
                       <span>100+ Hours of Video Lectures</Video></span>
@@ -1088,7 +1088,7 @@
                     </a>
                   </div>
                 </div> -->
-<!--               </div>
+            </div>
               <div class="col col-lg-4">
                 <div class="pricing_card text-center tilt">
                   <h3 class="card_heading">Premium Plan</h3>
@@ -1113,11 +1113,11 @@
                     <li>
                       <i class="fas fa-caret-right"></i>
                       <span>Help in Assignments</span> -->
-<!--                     </li>
+                   </li>
                   </ul>
                   <div class="btn_wrap pb-0">
                     <a class="btn border_dark" href="#!"> -->
-<!--                       <span>
+                    <span>
                         <small>Grab Now</small>
                         <small>Grab Now</small>
                       </span>
