--- a/index.html
+++ b/index.html
@@ -1020,7 +1020,7 @@
                 <div class="pricing_card text-center tilt">
                   <h3 class="card_heading">Basic Plan</h3>
                   <div class="pricing_wrap">
-                    <span class="price_value"><sup>₹</sup>99</span>
+                    <span class="price_value"><sup>₹</sup>49</span>
                     <small class="d-block">For 3 Months</small>
                   </div>
                   <hr>
@@ -1057,7 +1057,7 @@
                   <div class="card_badge">For 1st Year Only</div>
                   <h3 class="card_heading">Standard Plan</h3>
                   <div class="pricing_wrap">
-                    <span class="price_value"><sup>₹</sup>199</span>
+                    <span class="price_value"><sup>₹</sup>59</span>
                     <small class="d-block">For Free</small>
                   </div>
                   <hr>
@@ -1087,13 +1087,13 @@
                       </span>
                     </a>
                   </div>
-                </div> -->
+                </div> 
             </div>
               <div class="col col-lg-4">
                 <div class="pricing_card text-center tilt">
                   <h3 class="card_heading">Premium Plan</h3>
                   <div class="pricing_wrap">
-                    <span class="price_value"><sup>₹</sup>299</span>
+                    <span class="price_value"><sup>₹</sup>99</span>
                     <small class="d-block">For 6 Months</small>
                   </div>
                   <hr>
