--- a/index.html
+++ b/index.html
@@ -1112,11 +1112,11 @@
                     </li>
                     <li>
                       <i class="fas fa-caret-right"></i>
-                      <span>Help in Assignments</span> -->
+                      <span>Help in Assignments</span> 
                    </li>
                   </ul>
                   <div class="btn_wrap pb-0">
-                    <a class="btn border_dark" href="#!"> -->
+                    <a class="btn border_dark" href="#!"> 
                     <span>
                         <small>Grab Now</small>
                         <small>Grab Now</small>
