--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
                     <a class="btn border_dark" href="#!">
                       <span>
                         <small>Grab Now</small>
-                        <small>Grab Now</small> -->
+                        <small>Grab Now</small> 
                        </span>
                     </a>
                   </div>
