--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,7 @@
                   <ul class="info_list unordered_list_block text-start">
                     <li>
                       <i class="fas fa-caret-right"></i>
-                      <span>20 Courses for 3 Months</span> -->
+                      <span>20 Courses for 3 Months</span> 
                     </li>
                     <li>
                       <i class="fas fa-caret-right"></i>
