--- a/index.html
+++ b/index.html
@@ -1168,7 +1168,7 @@
                 <div class="carousel_item">
                   <div class="testimonial_item">
                     <div class="testimonial_image">
-                      <img src="Assets2/Harshita Review.png" alt="NotesEra – Online Learning Platform">
+                    <img src="durva.jpg" alt="NotesEra – Online Learning Platform">  <!--    Assets2/Harshita Review.png" -->
                     </div>
                     <div class="testimonial_content">
                       <ul class="rating_star unordered_list">
