--- a/index.html
+++ b/index.html
@@ -1200,13 +1200,12 @@
                       <li class="active"><i class="fas fa-star"></i></li>
                       <li class="active"><i class="fas fa-star"></i></li>
                     </ul>
-                    <h3 class="testimonial_title">Exceptional notes taken</h3>
+                    <h3 class="testimonial_title">Incredible resource!</h3>
                     <p>
-                      Diligently transcribed and organized, these notes stand as a testament to meticulous attention and
-                      thorough comprehension.
+                     Fantastic study notes website! Genuine content and user-friendly interface make accessing study material a breeze. A valuable resource for students.
                     </p>
-                    <h4 class="testimonial_designation">Data Structures Notes: 3rd Semester</h4>
-                    <h5 class="testimonial_name">Harshita Shukla</h5>
+                    <h4 class="testimonial_designation">Advance Java Programming: 4th Semester</h4>
+                    <h5 class="testimonial_name">Durva Sadawarte </h5>
                     <span class="quote_icon">
                       <i class="fas fa-quote-right"></i>
                     </span>
@@ -1226,13 +1225,12 @@
                       <li class="active"><i class="fas fa-star"></i></li>
                       <li class="active"><i class="fas fa-star"></i></li>
                     </ul>
-                    <h3 class="testimonial_title">Superbly crafted notes</h3>
+                    <h3 class="testimonial_title">A true gem for B.Tech students!</h3>
                     <p>
-                      With precision and finesse, these notes are a testament to the skillful art of capturing and
-                      presenting information.
+                  "5 stars for these B.Tech notes! They've become my go-to study material. The precision and depth make learning efficient and effective."
                     </p>
-                    <h4 class="testimonial_designation">Operating System: 3rd Semester</h4>
-                    <h5 class="testimonial_name">Hritik Pandey</h5>
+                    <h4 class="testimonial_designation">Data Structures: 3rd Semester</h4>
+                    <h5 class="testimonial_name">Hardik Gupta</h5>
                     <span class="quote_icon">
                       <i class="fas fa-quote-right"></i>
                     </span>
@@ -1252,13 +1250,12 @@
                       <li class="active"><i class="fas fa-star"></i></li>
                       <li class="active"><i class="fas fa-star"></i></li>
                     </ul>
-                    <h3 class="testimonial_title">Remarkable note-taking</h3>
+                    <h3 class="testimonial_title">These B.Tech notes are a goldmine for exam preparation.</h3>
                     <p>
-                      The process of note-taking has been elevated to an art form, evident in the comprehensive nature
-                      of these notes.
+                     The best thing that I liked about Notes-Era is that the Notes are very skillfully planned and are designed as per the needs, no extra unwanted information is there which helps when we have to study for an exam or when we have to do a quick revision.
                     </p>
-                    <h4 class="testimonial_designation">Cloud Computing: 4th Semester</h4>
-                    <h5 class="testimonial_name">Jasneet Singh Saini</h5>
+                    <h4 class="testimonial_designation">Database Management: 4th Semester</h4>
+                    <h5 class="testimonial_name">Kanishk Jain </h5>
                     <span class="quote_icon">
                       <i class="fas fa-quote-right"></i>
                     </span>
@@ -1278,13 +1275,12 @@
                       <li class="active"><i class="fas fa-star"></i></li>
                       <li class="active"><i class="fas fa-star"></i></li>
                     </ul>
-                    <h3 class="testimonial_title">Excellent note compilation</h3>
+                    <h3 class="testimonial_title">Marks Oreinted Notes!</h3>
                     <p>
-                      The compilation of these notes is a shining example of excellence, reflecting a mastery of
-                      assimilating and conveying knowledge.
+                      Very helpful website for the students. The topic I was searching for here has been explained very easily and in simple language.All notes are covered according to the syllabus
                     </p>
-                    <h4 class="testimonial_designation">Advanced JAVA: 4th Semester</h4>
-                    <h5 class="testimonial_name">Unnat Singh Mahto</h5>
+                    <h4 class="testimonial_designation">Operating System: 4th Semester</h4>
+                    <h5 class="testimonial_name">Mahik Makariya</h5>
                     <span class="quote_icon">
                       <i class="fas fa-quote-right"></i>
                     </span>
