--- a/index.html
+++ b/index.html
@@ -1277,7 +1277,7 @@
                     </ul>
                     <h3 class="testimonial_title">Marks Oreinted Notes!</h3>
                     <p>
-                      Very helpful website for the students. The topic I was searching for here has been explained very easily and in simple language.All notes are covered according to the syllabus
+                      Very helpful website for the students. The topic I was searching for here has been explained very easily and in simple language.All notes are covered according to the syllabus.
                     </p>
                     <h4 class="testimonial_designation">Operating System: 4th Semester</h4>
                     <h5 class="testimonial_name">Mahik Makariya</h5>
