--- a/index.html
+++ b/index.html
@@ -1042,32 +1042,36 @@
                 <h3 class="card_heading">Basic Plan</h3>
                 <div class="pricing_wrap">
                   <span class="price_value"><sup>₹</sup>49</span>
-                  <small class="d-block">For 3 Months</small>
+                  <small class="d-block">Special Offer!</small>
                 </div>
                 <hr>
                 <ul class="info_list unordered_list_block text-start">
                   <li>
                     <i class="fas fa-caret-right"></i>
-                    <span>10 Courses for 3 Months</span>
+                    <span>DSA in C++ / DSA in Java / Basic C-Programming for 1st Sem Students.
+Any one bootcamp lectures recording (valid for only 3 Months).
+
+ </span>
                   </li>
                   <li>
                     <i class="fas fa-caret-right"></i>
-                    <span>50+ Hours of Video Lectures</span>
+                    <span>Notes+Assignments
+</span>
                   </li>
                   <li>
                     <i class="fas fa-caret-right"></i>
-                    <span>1 to 1 Mentorship</span>
+<!--                     <span></span> -->
                   </li>
                   <li>
                     <i class="fas fa-caret-right"></i>
-                    <span>End Semster Exam Packages</span>
+<!--                     <span>End Semster Exam Packages</span> -->
                   </li>
                 </ul>
                 <div class="btn_wrap pb-0">
                   <a class="btn border_dark" href="#!">
                     <span>
-                      <small>Grab Now</small>
-                      <small>Grab Now</small>
+                      <small>Register Now </small>
+                      <small>Register Now </small>
                     </span>
                   </a>
                 </div>
@@ -1075,29 +1079,46 @@
             </div>
             <div class="col col-lg-4">
               <div class="pricing_card text-center bg_dark tilt">
-                <div class="card_badge">For 1st Year Only</div>
+<!--                 <div class="card_badge">For 1st Year Only</div> -->
                 <h3 class="card_heading">Standard Plan</h3>
                 <div class="pricing_wrap">
                   <span class="price_value"><sup>₹</sup>59</span>
-                  <small class="d-block">For Free</small>
+                  <small class="d-block">Special Offer !</small>
                 </div>
                 <hr>
                 <ul class="info_list unordered_list_block text-start">
                   <li>
                     <i class="fas fa-caret-right"></i>
-                    <span>20 Courses for 3 Months</span>
+                    <span>10 Days Basic Programming Bootcamp for First Year Students.
+</span>
                   </li>
                   <li>
                     <i class="fas fa-caret-right"></i>
-                    <span>100+ Hours of Video Lectures</Video></span>
+                    <span>Live Classes+Doubt Sessions</Video></span>
                   </li>
                   <li>
                     <i class="fas fa-caret-right"></i>
-                    <span>1 to 1 Mentorship</span>
+                    <span>Lectures recording (Valid for only 3 Months).</span>
                   </li>
                   <li>
                     <i class="fas fa-caret-right"></i>
-                    <span>End-Sem + Mid-Sem Packages</span>
+                    <span>VIVA Questions</span>
+                  </li>
+                  <li>
+                    <i class="fas fa-caret-right"></i>
+                    <span>Notes+Assignments</span>
+                  </li>
+                   <li>
+                    <i class="fas fa-caret-right"></i>
+                    <span>Logic Building</span>
+                  </li>
+                  <li>
+                    <i class="fas fa-caret-right"></i>
+                    <span>Resume Building</span>
+                  </li>
+                  <li>
+                    <i class="fas fa-caret-right"></i>
+                    <span>Certificates ISO Certified  </span>
                   </li>
                 </ul>
                 <div class="btn_wrap pb-0">
