--- a/index.html
+++ b/index.html
@@ -1049,7 +1049,7 @@
                   <li>
                     <i class="fas fa-caret-right"></i>
                     <span>DSA in C++ / DSA in Java / Basic C-Programming for 1st Sem Students.
-Any one bootcamp lectures recording (valid for only 3 Months).
+                            Any one bootcamp lectures recording (valid for only 3 Months).
 
  </span>
                   </li>
@@ -1057,15 +1057,15 @@ Any one bootcamp lectures recording (valid for only 3 Months).
                     <i class="fas fa-caret-right"></i>
                     <span>Notes+Assignments
 </span>
-                  </li>
+<!--                   </li>
                   <li>
                     <i class="fas fa-caret-right"></i>
-<!--                     <span></span> -->
-                  </li>
+                 <span></span> -->
+<!--                   </li>
                   <li>
-                    <i class="fas fa-caret-right"></i>
-<!--                     <span>End Semster Exam Packages</span> -->
-                  </li>
+                    <i class="fas fa-caret-right"></i> -->
+<!--              <span>End Semster Exam Packages</span> --> -->
+<!--                   </li> --> -->
                 </ul>
                 <div class="btn_wrap pb-0">
                   <a class="btn border_dark" href="#!">
@@ -1089,7 +1089,7 @@ Any one bootcamp lectures recording (valid for only 3 Months).
                 <ul class="info_list unordered_list_block text-start">
                   <li>
                     <i class="fas fa-caret-right"></i>
-                    <span>10 Days Basic Programming Bootcamp for First Year Students.
+                    <span>10 Days Basic C-Programming Bootcamp for First Year Students.
 </span>
                   </li>
                   <li>
