--- a/index.html
+++ b/index.html
@@ -1064,8 +1064,8 @@
 <!--                   </li>
                   <li>
                     <i class="fas fa-caret-right"></i> -->
-<!--              <span>End Semster Exam Packages</span> --> -->
-<!--                   </li> --> -->
+<!--              <span>End Semster Exam Packages</span> --> 
+<!--                   </li> --> 
                 </ul>
                 <div class="btn_wrap pb-0">
                   <a class="btn border_dark" href="#!">
@@ -1124,8 +1124,8 @@
                 <div class="btn_wrap pb-0">
                   <a class="btn btn_primary" href="https://chat.whatsapp.com/BrEZj88N463Io4JLJnZA2v">
                     <span>
-                      <small>Grab Now</small>
-                      <small>Grab Now</small>
+                      <small>Register Now</small>
+                      <small>Register Now</small>
                     </span>
                   </a>
                 </div>
@@ -1136,32 +1136,48 @@
                 <h3 class="card_heading">Premium Plan</h3>
                 <div class="pricing_wrap">
                   <span class="price_value"><sup>₹</sup>99</span>
-                  <small class="d-block">For 6 Months</small>
+                  <small class="d-block">Special Offer!</small>
                 </div>
                 <hr>
                 <ul class="info_list unordered_list_block text-start">
                   <li>
                     <i class="fas fa-caret-right"></i>
-                    <span>All IMPs of Every Course</span>
+                    <span>DSA in JAVA / DSA in C++ (Any One Bootcamp) 15 Days Bootcamp</span>
                   </li>
                   <li>
                     <i class="fas fa-caret-right"></i>
-                    <span>Access to Premium Notes</span>
+                    <span>Live Classes+Doubt Sessions</span>
                   </li>
                   <li>
                     <i class="fas fa-caret-right"></i>
-                    <span>All Practical File Resources</span>
+                    <span>Logic Building</span>
                   </li>
                   <li>
                     <i class="fas fa-caret-right"></i>
-                    <span>Help in Assignments</span>
+                    <span>Basic Interview Questions Practice</span>
+                  </li>
+                   <li>
+                    <i class="fas fa-caret-right"></i>
+                    <span>Lectures recordings(Valid for only 3 Months)</span>
+                  </li>
+                  <li>
+                    <i class="fas fa-caret-right"></i>
+                    <span>Notes+Assignments </span>
+                  </li>
+                  <li>
+                    <i class="fas fa-caret-right"></i>
+                    <span>Resume Building </span>
+                  </li>
+                   <li>
+                    <i class="fas fa-caret-right"></i>
+                    <span>Certificates ISO Certified</span>
                   </li>
                 </ul>
                 <div class="btn_wrap pb-0">
                   <a class="btn border_dark" href="#!">
                     <span>
-                      <small>Grab Now</small>
-                      <small>Grab Now</small>
+                      <small>Register Now</small>
+                      <small>Register Now</small>
                     </span>
                   </a>
                 </div>
