--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
         <div class="container decoration_wrap">
           <div class="section_heading text-center">
             <h2 class="heading_text mb-0">
-              Premium Price Packages
+              Premium BootCamps
             </h2>
           </div>
 
