--- a/coursesdropdown.html
+++ b/coursesdropdown.html
@@ -19,6 +19,9 @@
           <li class="active">Medicaps</li>
           <li>IPS Academy</li>
           <li>Acropolis</li>
+          <li>Vaishnav</li>
+          <li>IIST</li>
+           <li>MIT</li>
           <!-- Add more college options as needed -->
         </ul>
       </div>
@@ -44,7 +47,6 @@
         </div>
         <ul class="menu">
           <li class="active">Notes</li>
-          <li>PYQ</li>
           <li>Assignment</li>
           <li>MST 1</li>
           <li>MST 2</li>
