--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                 <button data-bs-toggle="tab" data-bs-target="#teb_design" type="button" role="tab"
                   aria-selected="false">
                   <i class="fas fa-palette"></i>
-                  <span>Marketing</span>
+                  <span>Consultant</span>
                 </button>
               </li>
             </ul>
@@ -864,7 +864,7 @@
                       <div class="item_content">
                         <div class="d-flex align-items-center justify-content-between mb-3">
                           <ul class="item_category_list unordered_list">
-                            <li><a href="#!">Management Head</a></li>
+                            <li><a href="#!">Consultant</a></li>
                           </ul>
                           <div class="item_price">
                             <span class="sale_price">3rd Year</span>
@@ -873,11 +873,11 @@
                         <ul class="meta_info_list unordered_list">
                           <li>
                             <i class="fas fa-chart-bar"></i>
-                            <span>Action</span>
+                            <span>Thinking</span>
                           </li>
                           <li>
                             <i class="fas fa-clock"></i>
-                            <span>Alertness</span>
+                            <span>Growth</span>
                           </li>
                           <li>
                             <i class="fas fa-star"></i>
