--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
               <div class="btn_wrap pt-0 d-none d-lg-flex justify-content-end">
                 <a class="btn border_dark" href="coursesdropdown.html">
                   <span>
-                    <small>Explore Courses</small>
-                    <small>Explore Courses</small>
+                    <small>Explore Notes</small>
+                    <small>Explore Notes</small>
                   </span>
                 </a>
               </div>
@@ -283,8 +283,8 @@
               <div class="btn_wrap pb-0 d-block d-lg-none text-center">
                 <a class="btn border_dark" href="coursesdropdown.html">
                   <span>
-                    <small>Explore Courses</small>
-                    <small>Explore Courses</small>
+                    <small>Explore Notes</small>
+                    <small>Explore Notes</small>
                   </span>
                 </a>
               </div>
@@ -930,8 +930,8 @@
                 <div class="btn_wrap pb-0">
                   <a class="btn btn_primary" href="coursesdropdown.html">
                     <span>
-                      <small>Explore Courses</small>
-                      <small>Explore Courses</small>
+                      <small>Explore Notes</small>
+                      <small>Explore Notes</small>
                     </span>
                   </a>
                 </div>
