--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                   <li>
                     <a class="btn btn_primary" href="coursesdropdown.html">
                       <span>
-                        <small>Explore Courses</small>
-                        <small>Explore Courses</small>
+                        <small>Explore Notes</small>
+                        <small>Explore Notes</small>
                       </span>
                     </a>
                   </li>
